# translate-with-transformers

./: .gitignore  README.md  pyproject.toml
notebooks/: download_testing.ipynb  spacy_testing.ipynb  text_loading_testing.ipynb
src/feature_pipeline/: data_sourcing.py  preprocessing.py
src/feature_pipeline/pretrained/: spacy_models.py
src/feature_pipeline/scratch/: model_inputs.py
src/setup/: paths.py
src/training_pipeline/: model.py
src/training_pipeline/models/pretrained/: training.py
src/training_pipeline/models/scratch/: build.py  components.py  construction.py  training.py
tests/scratch/: input_sizes.py
