[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Kobina Brandon <maadabrandon@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.3.0"
torchmetrics = "^1.3.2"
optuna = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
