[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Kobina Brandon <maadabrandon@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.3.0"
torchmetrics = "^1.3.2"
optuna = "^3.6.1"
tensorboard = "^2.16.2"
torchtext = "0.6"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
tqdm = "^4.66.2"
loguru = "^0.7.2"
ipykernel = "^6.29.4"
ruff = "^0.4.2"
tokenizers = "^0.19.1"
scikit-learn = "^1.4.2"
torch-tb-profiler = "^0.4.3"
transformers = "^4.41.0"
sacrebleu = "^2.4.2"
sentencepiece = "^0.2.0"
accelerate = "^0.30.1"
spacy = "^3.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
